change VID and PID

--- a/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
+++ b/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STCMON51.DLL V1, 0, 8, 0
 Dialog DLL:      TP51.DLL V2.60.0.0
  
 <h2>Project:</h2>
-D:\Drive\OneDrive\Tai_Lieu\USB\USB_Soft\STC8F\USB_STC8_V2\STC8_USB.uvproj
+D:\Drive\OneDrive\Tai_Lieu\USB\USB_Soft\STC8F\USB_STC8F\USB_STC8F_V2\STC8_USB.uvproj
 Project File Date:  08/13/2019
 
 <h2>Output:</h2>
