--- a/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
+++ b/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
@@ -26,10 +26,13 @@ Project File Date:  08/13/2019
 
 <h2>Output:</h2>
 Build target 'STC8_USB'
+compiling main.c...
+User\Src\main.c(14): warning C280: 'buffer': unreferenced local variable
+User\Src\main.c(14): warning C280: 'length': unreferenced local variable
 linking...
 Program Size: data=45.0 xdata=287 const=709 code=3264
 creating hex file from ".\Objects\STC8_USB"...
-".\Objects\STC8_USB" - 0 Error(s), 0 Warning(s).
+".\Objects\STC8_USB" - 0 Error(s), 2 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
