--- a/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
+++ b/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
@@ -26,11 +26,12 @@ Project File Date:  08/13/2019
 
 <h2>Output:</h2>
 Build target 'STC8_USB'
+compiling usb.c...
 linking...
-Program Size: data=41.0 xdata=287 const=709 code=3231
+Program Size: data=41.0 xdata=287 const=709 code=3235
 creating hex file from ".\Objects\STC8_USB"...
 ".\Objects\STC8_USB" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
