fix usb_rx_count error

--- a/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
+++ b/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
@@ -25,12 +25,26 @@ D:\Drive\OneDrive\Tai_Lieu\USB\USB_Soft\STC8F\USB_STC8F\USB_STC8F_V2\STC8_USB.uv
 Project File Date:  08/28/2019
 
 <h2>Output:</h2>
-Build target 'STC8_USB'
+Rebuild target 'STC8_USB'
+compiling main.c...
+User\Src\main.c(14): warning C280: 'endpoint': unreferenced local variable
+User\Src\main.c(14): warning C280: 'buffer': unreferenced local variable
+User\Src\main.c(14): warning C280: 'length': unreferenced local variable
+compiling delay.c...
+compiling stc8f_gpio.c...
+assembling usb_rx.asm...
+assembling usb_tx.asm...
+compiling usb.c...
+compiling usb_it.c...
+assembling usb_ack.asm...
+assembling usb_nack.asm...
+compiling usb_config.c...
+assembling usb_process.asm...
 linking...
-Program Size: data=36.0 xdata=265 const=709 code=3162
+Program Size: data=36.0 xdata=265 const=709 code=3164
 creating hex file from ".\Objects\STC8_USB"...
-".\Objects\STC8_USB" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+".\Objects\STC8_USB" - 0 Error(s), 3 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
