--- a/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
+++ b/USB_STC8F_V2/Objects/STC8_USB.build_log.htm
@@ -3,21 +3,21 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.25.3.0
-Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Bui Thanh Tung, smdchip, LIC=NQZ2Z-J3E83-C4TSX-HAE7Q-VXYRZ-ZSUWI
+IDE-Version: µVision V5.27.1.0
+Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Bui Thanh Tung, SMD, LIC=QFHGK-ZVDIZ-WME9F-6SZR2-PD1AZ-XPKW2
  
 Tool Versions:
-Toolchain:       PK51 Prof. Developers Kit  Version: 9.59.0.0
-Toolchain Path:  C:\Program Files\Keil C\C51\C51\BIN
-C Compiler:      C51.exe V9.59.0.0
+Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.0.0
+Toolchain Path:  C:\Program Files\Keil\C51\C51\BIN
+C Compiler:      C51.exe V9.60.0.0
 Assembler:       A51.exe V8.2.7.0
-Linker/Locator:  LX51.exe V4.66.93.0
+Linker/Locator:  LX51.exe V4.66.97.0
 Library Manager: LIBX51.exe V4.30.1.0
 Hex Converter:   OHX51.exe V1.47.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
-Dialog DLL:      DP51.DLL V2.66.0.0
-Target DLL:      STCMON51.DLL V1, 0, 8, 0
+Dialog DLL:      DP51.DLL V2.67.0.0
+    Target DLL: STCMON51.DLL
 Dialog DLL:      TP51.DLL V2.60.0.0
  
 <h2>Project:</h2>
@@ -25,26 +25,12 @@ D:\Drive\OneDrive\Tai_Lieu\USB\USB_Soft\STC8F\USB_STC8F\USB_STC8F_V2\STC8_USB.uv
 Project File Date:  08/28/2019
 
 <h2>Output:</h2>
-Rebuild target 'STC8_USB'
-compiling main.c...
-User\Src\main.c(14): warning C280: 'endpoint': unreferenced local variable
-User\Src\main.c(14): warning C280: 'buffer': unreferenced local variable
-User\Src\main.c(14): warning C280: 'length': unreferenced local variable
-compiling delay.c...
-compiling stc8f_gpio.c...
-assembling usb_rx.asm...
-assembling usb_tx.asm...
-compiling usb.c...
-compiling usb_it.c...
-assembling usb_ack.asm...
-assembling usb_nack.asm...
-compiling usb_config.c...
-assembling usb_process.asm...
+Build target 'STC8_USB'
 linking...
 Program Size: data=36.0 xdata=265 const=709 code=3164
 creating hex file from ".\Objects\STC8_USB"...
-".\Objects\STC8_USB" - 0 Error(s), 3 Warning(s).
-Build Time Elapsed:  00:00:01
+".\Objects\STC8_USB" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
